manifests/media-stack/sonarr/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: media
spec:
  type: NodePort
  selector:
    app: sonarr
  ports:
    - port: 8989
      targetPort: 8989
      nodePort: 30005 # Fester Port für Browser-Zugriff
