manifests/media-stack/sonarr/sonarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingressroute
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.janikhenz.ch`)
      kind: Rule
      services:
        - name: sonarr-service
          port: 8989
